[workspace]
resolver = '2'
members = [
    "crates/wasi-common",
    "crates/blockless-drivers",
    "crates/blockless-env",
    "crates/blockless-multiaddr",
    "blockless",
    "bls-runtime",
]

[workspace.package]
version = "14.0.0"
authors = ["The Blockless Project Developers"]
edition = "2021"


[patch.crates-io]
wasi-common = {path = "crates/wasi-common"}
wasi-cap-std-sync = {path = "crates/wasi-common/cap-std-sync"}

[workspace.dependencies]
wasmtime = "14.0.0"
wasmtime-wasi = "14.0.0"
wiggle-generate = "14.0.0"
wasmtime-wasi-threads = "14.0.0" 
wasi-common = {path = "crates/wasi-common", version="14.0.0"}
wasi-cap-std-sync = {path = "crates/wasi-common/cap-std-sync", version="14.0.0"}
anyhow = "1.0.22"
cap-std = "2.0.0"
wiggle = "14.0.0"
cap-fs-ext = "2.0.0"
cap-time-ext = "2.0.0"
cap-tempfile = "2.0.0"
cap-rand = { version = "2.0.0", features = ["small_rng"] }
bytes = "1"
socket2 = "0.5.5"
is-terminal = "0.4.0"
bitflags = "2.0"
async-trait = "0.1.71"
tracing = "0.1.26"
io-lifetimes = { version = "2.0.2", default-features = false }
log = { version = "0.4.8", default-features = false }
thiserror = "1.0.43"
blockless-drivers = {path = "crates/blockless-drivers"}

windows-sys = "0.48.0"
once_cell = "1.12.0"
md5 = "0.7.0"
rust-car = "0.1.4"
tempdir = "0.3.7"
dlopen = "0.1"
lazy_static = "1.4.0"
syn = "2.0.25"

tokio = { version = "1.26.0" }
system-interface = { version = "0.26.0", features = ["cap_std_impls"] }
fs-set-times = "0.20.0"
io-extras = "0.18.0"
rustix = "0.38.20"

