[workspace]
resolver = '2'
members = [
    "crates/wasi-common",
    "crates/blockless-drivers",
    "crates/blockless-env",
    "crates/blockless-multiaddr",
    "blockless",
    "bls-runtime",
]

[workspace.package]
version = "22.0.0"
authors = ["The Blockless Project Developers"]
edition = "2021"


[patch.crates-io]
wasi-common = {path = "crates/wasi-common"}

[workspace.dependencies]
tempfile = "3.1.0"
libc = "0.2.60"
wasmtime = "=22.0.0"
wasmtime-wasi = "=22.0.0"
wiggle-generate = "=22.0.0"
wasmtime-cli-flags = "=22.0.0"
wasmtime-wasi-threads = "=22.0.0" 
wasi-common = { path = "crates/wasi-common", version="=22.0.0" }
# witx dependency by wiggle
wiggle = "=22.0.0"
witx = "0.9.1"

anyhow = "1.0.22"
cap-std = "3.0.0"
cap-fs-ext = "3.0.0"
cap-time-ext = "3.0.0"
cap-tempfile = "3.0.0"
cap-rand = { version = "3.0.0", features = ["small_rng"] }
test-log = { version = "0.2", default-features = false, features = ["trace"] }
tracing-subscriber = { version = "0.3.1", default-features = false, features = ['fmt', 'env-filter', 'ansi', 'tracing-log'] }
clap = "4.3.12"

is-terminal = "0.4.0"
bitflags = "2.0"
async-trait = "0.1.71"
tracing = "0.1.26"
url = "2.3.1"
io-lifetimes = { version = "2.0.3", default-features = false }
log = { version = "0.4.8", default-features = false }
thiserror = "1.0.43"
blockless-drivers = { path = "crates/blockless-drivers" }
blockless-multiaddr = { path = "crates/blockless-multiaddr" }
env_logger = "0.10"

windows-sys = "0.52.0"
once_cell = "1.12.0"
md5 = "0.7.0"
rust-car = "0.1.4"
tempdir = "0.3.7"
bytes = "1.4"
futures-core = { version = "0.3.27", default-features = false }
futures-util = { version = "0.3.27", default-features = false }
dlopen = "0.1"
lazy_static = "1.4.0"
syn = "2.0.25"
json = {version = "0.12.4"}

tokio = { version = "1.26.0", features = [ "rt", "time" ] }
system-interface = { version = "0.27.1", features = ["cap_std_impls"] }
fs-set-times = "0.20.1"
io-extras = "0.18.1"
rustix = "0.38.31"

[workspace.lints.rust]
# Turn on some lints which are otherwise allow-by-default in rustc.
unused_extern_crates = 'warn'
trivial_numeric_casts = 'warn'
unstable_features = 'warn'
unused_import_braces = 'warn'

[workspace.lints.clippy]
# The default set of lints in Clippy is viewed as "too noisy" right now so
# they're all turned off by default. Selective lints are then enabled below as
# necessary.
all = 'allow'
