[package]
name = "blockless-cli"
version = "0.1.0"
authors = ["Join.G"]
description = "command line example"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

[dependencies]
blockless = {path = "../blockless"}
anyhow = {workspace = true}
json = "0.12"
tokio = {version = "1", features = ["rt", "net"]}
log = "0.4.17"
[dependencies.env_logger]
version = "0.8"

