[package]
name = "blockless-cli"
version = "0.1.0"
authors = ["Join.G"]
description = "command line example"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

[dependencies]
blockless = {path = "../blockless"}
anyhow = {workspace = true}
json = "0.12"
tokio = {version = "1", features = ["rt", "net", "time"]}
log = "0.4.17"
rust-car = {workspace = true}
md5 = {workspace = true}

[dependencies.env_logger]
version = "0.8"
