[package]
name = "blockless"
version = "0.1.0"
authors = ["Join.G"]
description = "WASI example"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

[dependencies]
wasmtime = "0.36.0"
wasmtime-wasi = "0.36.0"
cap-std = "0.24.1"
blockless-drivers = {path = "../crates/blockless-drivers"}
blockless-env = {path = "../crates/blockless-env"}
anyhow = "1"
log = "0.4"