[package]
name = "blockless"
version = "0.1.0"
authors = ["Join.G"]
description = "WASI example"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

[dependencies]
wasi-common = {workspace = true}
wasmtime = {workspace = true}
wasmtime-wasi = {workspace = true}
cap-std = {workspace = true}
blockless-drivers = {workspace = true}
blockless-env = {path = "../crates/blockless-env"}
anyhow = {workspace = true}
log = "0.4"

[dev-dependencies]
tempdir = {workspace = true}
tokio = {version = "1", features = ["rt", "net", "time"]}
md5 = {workspace = true}