[package]
name = "bls-runtime"
version = "0.6.2"
authors = ["Join.G"]
description = "command line example"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

[dependencies]
blockless = { path = "../blockless" }
anyhow = { workspace = true }
json = { workspace = true }
tokio = {workspace = true, features = ["net", "time", "macros", "rt-multi-thread"]}
log = { workspace = true }
rust-car = { workspace = true }
md5 = { workspace = true }
url = { workspace = true }
clap = { workspace = true, features = ["color", "suggestions", "derive"] }
dlopen = { workspace = true }
once_cell.workspace = true
dotenvy = "0.15.7"
env_logger = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
