[package]
name = "simple-cli"
version = "0.1.0"
authors = ["Join.G"]
description = "command line example"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

[dependencies]
blockless = {path = "../blockless"}
anyhow = "1"
json = "0.12"
tokio = {version = "1", features = ["rt", "net"]}

[dependencies.env_logger]
version = "0.8"
