[package]
name = "blockless-drivers"
version = "0.1.0"
authors = ["Join.G"]
description = "blockless drivers"
keywords = ["blockless", "driver"]
readme = "README.md"
edition = "2021"

[features]
default = ["builtin_http"]
builtin_http = []

[dependencies]
blockless-drivers-macro = {path = "macro"}
wasmtime-wasi = {workspace = true}
wiggle = {workspace = true}
anyhow = {workspace = true}
cap-std = {workspace = true}
log = "0.4"
async-trait = "0.1"
dlopen = "0.1"
reqwest = {version = "0.11", features = ["stream"]}
serde_urlencoded = "0.7"
bytes = "1"
httparse = "1"
json = {version = "0.12.4"}
wasi-cap-std-sync = {workspace = true}
wasi-common = {workspace = true}
url = "2.2"
rust-s3 = "0.32.0"
futures-core = "0.3.25"
futures-util = "0.3.25"


[dependencies.lazy_static]
version = "1.4.0"

[dependencies.tokio]
version = "1"
features = ["net", "process"]

[dependencies.blockless-multiaddr]
path = "../blockless-multiaddr"
