[package]
name = "blockless-drivers"
version = "0.1.0"
authors = ["Join.G"]
description = "blockless drivers"
keywords = ["blockless", "driver"]
readme = "README.md"
edition = "2021"

[features]
default = ["builtin_http"]
builtin_http = []
wiggle_metadata = ["wiggle/wiggle_metadata"]

[dependencies]
blockless-drivers-macro = {path = "macro"}
wasmtime-wasi = {workspace = true}
wiggle = {workspace = true}
wasi-cap-std-sync = {workspace = true}
wasi-common = {workspace = true}
anyhow = {workspace = true}
cap-std = {workspace = true}
log = "0.4"
async-trait = "0.1"
dlopen = "0.1"
reqwest = {version = "0.11", features = ["stream"]}
serde_urlencoded = "0.7"
bytes = "1"
httparse = "1"
json = {version = "0.12.4"}
url = "2.2"
rust-s3 = "0.32.0"
futures-core = "0.3.25"
futures-util = "0.3.25"
md5 = "0.7.0"

[dependencies.rusqlite]
version = "0.28"
features = ["bundled"]


[dev-dependencies]
tempdir = "0.3.7"
tokio-test = "0.4.2"


[dependencies.lazy_static]
version = "1.4.0"

[dependencies.tokio]
version = "1"
features = ["net", "process", "fs"]


[dependencies.blockless-multiaddr]
path = "../blockless-multiaddr"
