[package]
name = "blockless-drivers"
version = "0.1.0"
authors = ["Join.G"]
description = "blockless drivers"
keywords = ["blockless", "driver"]
readme = "README.md"
edition = "2021"

[features]
default = ["builtin_http"]
builtin_http = []
wiggle_metadata = ["wiggle/wiggle_metadata"]

[dependencies]
blockless-drivers-macro = {path = "macro"}
wasmtime-wasi = {workspace = true}
wiggle = {workspace = true}
wasi-cap-std-sync = {workspace = true}
wasi-common = {workspace = true}
anyhow = {workspace = true}
cap-std = {workspace = true}
log = {workspace = true}
async-trait = {workspace = true}
dlopen = {workspace = true}
json = {workspace = true}
reqwest = {version = "0.11", features = ["stream"]}
serde_urlencoded = "0.7"
bytes = { workspace = true }
httparse = "1"
url = { workspace = true }
rust-s3 = "0.32.0"
futures-core = {workspace = true}
futures-util = {workspace = true}
md5 = "0.7.0"

[dependencies.rusqlite]
version = "0.28"
features = ["bundled"]


[dev-dependencies]
tempdir = {workspace = true}
tokio-test = "0.4.2"


[dependencies.lazy_static]
workspace = true

[dependencies.tokio]
workspace = true
features = ["net", "process", "fs"]


[dependencies.blockless-multiaddr]
path = "../blockless-multiaddr"
