[package]
name = "blockless-env"
version = "0.1.0"
authors = ["Join.G"]
description = "blockless drivers"
keywords = ["blockless", "driver"]
readme = "README.md"
edition = "2021"

[dependencies]
wasi-common = {path = "../wasi-common"}
blockless-drivers = {path = "../blockless-drivers"}

[dependencies.blockless-drivers-macro]
path = "../blockless-drivers/macro"

[dependencies.wasmtime]
version = "0.36.0"
default-features = false

[dependencies.wiggle]
version = "=0.36.0"
default-features = false