[package]
name = "blockless-env"
version = "0.1.0"
authors = ["Join.G"]
description = "blockless drivers"
keywords = ["blockless", "driver"]
readme = "README.md"
edition = "2021"

[dependencies]
wasi-common = {workspace = true}
blockless-drivers = {path = "../blockless-drivers"}

[dependencies.blockless-drivers-macro]
path = "../blockless-drivers/macro"

[dependencies.wasmtime]
workspace = true
default-features = false

[dependencies.wiggle]
workspace = true
default-features = false