[package]
name = "wasi-common"
version = "0.36.0"
description = "WASI implementation in Rust"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

links = "wasi-common-19"

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
wiggle = { default-features = false, version = "0.36.0" }
tracing = "0.1.19"
cap-std = "0.24.1"
cap-rand = "0.24.1"
bitflags = "1.2"

[target.'cfg(unix)'.dependencies]
rustix = "0.33.5"

[target.'cfg(windows)'.dependencies]
io-extras = "0.13.2"
winapi = "0.3"

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["trace_log"]
# This feature enables the `tracing` logs in the calls to target the `log`
# ecosystem of backends (e.g. `env_logger`. Disable this if you want to use
# `tracing-subscriber`.
trace_log = [ "wiggle/tracing_log", "tracing/log" ]
# Need to make the wiggle_metadata feature available to consumers of this
# crate if they want the snapshots to have metadata available.
wiggle_metadata = ["wiggle/wiggle_metadata"]

[dependencies.blockless-multiaddr]
path = "../blockless-multiaddr"