[package]
name = "wasi-common"
version.workspace = true
description = "WASI implementation in Rust"
keywords = ["webassembly", "wasm"]
readme = "README.md"
edition = "2021"

links = "wasi-common-19"

[dependencies]
anyhow = {workspace = true}
thiserror = {workspace = true}
wiggle = { workspace = true}
tracing = { workspace = true }
cap-std = {workspace = true}
cap-rand = {workspace = true}
bitflags = { workspace = true }
log = { workspace = true }

[target.'cfg(unix)'.dependencies]
rustix = {workspace = true}

[target.'cfg(windows)'.dependencies]
io-extras = { workspace = true }

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
    "Win32_Networking_WinSock",
]

[badges]
maintenance = { status = "actively-developed" }

[features]
default = ["trace_log"]
# This feature enables the `tracing` logs in the calls to target the `log`
# ecosystem of backends (e.g. `env_logger`. Disable this if you want to use
# `tracing-subscriber`.
trace_log = [ "wiggle/tracing_log", "tracing/log" ]
# Need to make the wiggle_metadata feature available to consumers of this
# crate if they want the snapshots to have metadata available.
wiggle_metadata = ["wiggle/wiggle_metadata"]
file_perm = []

[dependencies.blockless-multiaddr]
path = "../blockless-multiaddr"