[package]
name = "wasi-cap-std-sync"
version = "2.0.2"
authors = ["The Wasmtime Project Developers"]
description = "WASI implementation in Rust"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasmtime"
readme = "README.md"
edition = "2021"
include = ["src/**/*", "README.md", "LICENSE" ]

[dependencies]
wasi-common = {workspace = true}
async-trait = "0.1"
anyhow = {workspace = true}
cap-std = {workspace = true}
cap-fs-ext = {workspace = true}
cap-time-ext = {workspace = true}
cap-rand = {workspace = true}
fs-set-times = "0.17.0"
system-interface = { version = "0.23.0", features = ["cap_std_impls"] }
tracing = {workspace = true}
io-lifetimes = { workspace = true, default-features = false }
is-terminal = "0.3.0"

[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["fs"] }

[target.'cfg(windows)'.dependencies]
once_cell = { workspace = true }
rustix = { workspace = true, features = ["net"] }
io-extras = "0.15.0"

[target.'cfg(windows)'.dependencies.windows-sys]
workspace = true
features = [
    "Win32_Foundation",
]

[dev-dependencies]
tempfile = "3.1.0"
