[package]
name = "wasi-tokio"
version = "0.36.0"
authors = ["The Wasmtime Project Developers"]
description = "WASI implementation in Rust"
license = "Apache-2.0 WITH LLVM-exception"
categories = ["wasm"]
keywords = ["webassembly", "wasm"]
repository = "https://github.com/bytecodealliance/wasmtime"
edition = "2021"
include = ["src/**/*", "LICENSE" ]

[dependencies]
wasi-common = {workspace = true}
wasi-cap-std-sync = {workspace = true}
wiggle = {workspace = true}
tokio = { version = "1.8.0", features = [ "rt", "fs", "time", "io-util", "net", "io-std", "rt-multi-thread"] }
cap-std = {workspace = true}
anyhow = {workspace = true}
io-lifetimes = { workspace = true, default-features = false }

[target.'cfg(unix)'.dependencies]
rustix = "0.35.10"

[target.'cfg(windows)'.dependencies]
winapi = "0.3"
lazy_static = "1.4"
io-extras = "0.13.0"

[dev-dependencies]
tempfile = "3.1.0"
tokio = { version = "1.8.0", features = [ "macros" ] }
anyhow = {workspace = true}
cap-tempfile = {workspace = true}
